@startuml
title Analytics App - Class Diagram
top to bottom direction
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName Times New Roman
skinparam defaultFontSize 12
skinparam ranksep 50
skinparam nodesep 32

package "analytics" {
  class UserInterestProfile {
    +user: UsersUser
    +category_scores: JSON
    +price_affinity: JSON
    +distance_sensitivity: Float
    +quality_sensitivity: Float
    +preferred_max_distance_km: Float
    +preferred_wilayas: JSON
    +search_keywords: JSON
    +preferred_sellers: JSON
    +last_updated: DateTime
    --
    +get_top_categories(limit: Integer = 5): List<Integer>
    +get_price_range_preference(): String
  }

  class InteractionLog {
    +user: UsersUser
    +product: CatalogProduct
    +category: CatalogCategory
    +action: String
    +metadata: JSON
    +session_id: String
    +timestamp: DateTime
  }
}

package "External" <<Frame>> {
  class "Users.User" as UsersUser <<external>>
  class "Catalog.Product" as CatalogProduct <<external>>
  class "Catalog.Category" as CatalogCategory <<external>>
}

UsersUser "1" <-- "0..1" UserInterestProfile
UsersUser "1" <-- "0..*" InteractionLog
CatalogProduct "0..1" <-- "0..*" InteractionLog
CatalogCategory "0..1" <-- "0..*" InteractionLog

@enduml
